Fix spacing and style for RPSLK

--- a/styles.css
+++ b/styles.css
@@ -222,6 +222,20 @@ figure.middlelarge {
   border-style: solid;
   border-radius: 4px;
 }
+figure.middletall {
+  display: block;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+  height: 620px;
+  margin-top: 1em;
+  margin-bottom: 2em;
+  background-color: silver;
+  text-align: center;
+  border-style: solid;
+  border-radius: 4px;
+}
 figure.videolarge {
   display: block;
   position: relative;
